# project-startup

./: README.md
templates/: README.md
templates/c/app/src/: CMakeLists.txt
templates/c/app/test/: CMakeLists.txt
templates/c/lib/: CMakeLists.txt
templates/c/lib/src/: CMakeLists.txt
templates/cpp/app/: CMakeLists.txt
templates/cpp/app/test/: CMakeLists.txt
templates/cpp/lib/src/: CMakeLists.txt
templates/languages/c/app/: CMakeLists.txt
templates/languages/c/lib/test/: CMakeLists.txt
templates/languages/cpp/app/src/: CMakeLists.txt
templates/languages/cpp/lib/: CMakeLists.txt
templates/languages/cpp/lib/test/: CMakeLists.txt
templates/languages/sh/lib/lib/: lib.sh
templates/licenses/: ecl-2.0.txt  isc.txt  ms-pl.txt  ms-rl.txt  ncsa.txt  ofl-1.1.txt  postgresql.txt  upl-1.0.txt
